<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bastian.prueba1.views.eventoNuevo"
    android:background="@drawable/fons5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventoNuevo"
        android:id="@+id/textView5"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/abc_dialog_padding_material"
        android:textColor="@color/abc_input_method_navigation_guard" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tituloEvento"
        android:layout_below="@+id/textView5"
        android:hint="@string/titEvento"
        android:singleLine="false"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/tituloEvento"
        android:hint="@string/descripcionEvento"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:hint="@string/tipoEvento"
        android:layout_alignLeft="@+id/editText8"
        android:layout_alignStart="@+id/editText8"
        android:layout_alignRight="@+id/editText8"
        android:layout_alignEnd="@+id/editText8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText8"
        android:layout_below="@+id/editText2"
        android:hint="@string/lugarEvento"
        android:layout_alignLeft="@+id/editText9"
        android:layout_alignStart="@+id/editText9"
        android:layout_alignRight="@+id/editText9"
        android:layout_alignEnd="@+id/editText9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText9"
        android:layout_below="@+id/editText8"
        android:layout_centerHorizontal="true"
        android:hint="@string/fechaIn" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editText10"
        android:hint="@string/horaIn"
        android:layout_below="@+id/editText9"
        android:layout_alignLeft="@+id/editText9"
        android:layout_alignStart="@+id/editText9" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:layout_marginBottom="20dp"
        android:id="@+id/editText12"
        android:hint="@string/horaFin"
        android:layout_below="@+id/editText10"
        android:layout_alignLeft="@+id/editText10"
        android:layout_alignStart="@+id/editText10" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearEvento"
        android:onClick="onclickcrearEvento"
        android:id="@+id/btnCrearEvento"
        android:layout_below="@+id/editText10"
        android:layout_toRightOf="@+id/editText10"
        android:layout_toEndOf="@+id/editText10"
        android:layout_marginTop="40dp" />
</RelativeLayout>
