<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bastian.prueba1.views.editarPerfil"
    android:background="@drawable/fons5">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignEnd="@+id/editText4"
        android:hint="@string/nombre"
        android:textStyle="italic" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"
        android:hint="@string/apellido"
        android:textStyle="italic"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/mail"
        android:ems="10"
        android:id="@+id/editText3"
        android:textStyle="italic"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/contraseña"
        android:ems="10"
        android:id="@+id/editText4"
        android:textStyle="italic"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:password="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:layout_below="@+id/editText6"
        android:layout_alignRight="@+id/editText6"
        android:layout_alignEnd="@+id/editText6"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:hint="@string/carrera"
        android:textStyle="italic" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editar"
        android:id="@+id/buttonconfirmareditarperf"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editarelperfil"
        android:id="@+id/textView"
        android:textIsSelectable="false"
        android:textStyle="normal"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Concierto"
        android:id="@+id/chbxconcierto"
        android:checked="false"
        android:layout_above="@+id/chbxasamblea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Obra de teatro"
        android:id="@+id/chbxobrateatro"
        android:checked="false"
        android:layout_below="@+id/textVieweditpref"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Asamblea"
        android:id="@+id/chbxasamblea"
        android:checked="false"
        android:layout_alignTop="@+id/chbxtitulacion"
        android:layout_alignLeft="@+id/chbxconcierto"
        android:layout_alignStart="@+id/chbxconcierto" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Titulación"
        android:id="@+id/chbxtitulacion"
        android:checked="false"
        android:layout_below="@+id/chbxobrateatro"
        android:layout_alignLeft="@+id/chbxobrateatro"
        android:layout_alignStart="@+id/chbxobrateatro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Elija sus preferencias:"
        android:id="@+id/textVieweditpref"
        android:textIsSelectable="false"
        android:textStyle="normal"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/editText7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simposio"
        android:id="@+id/chbxsimposio"
        android:layout_below="@+id/chbxasamblea"
        android:layout_alignLeft="@+id/chbxasamblea"
        android:layout_alignStart="@+id/chbxasamblea"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Esposición"
        android:id="@+id/chbxexposicion"
        android:layout_below="@+id/chbxtitulacion"
        android:layout_alignLeft="@+id/chbxtitulacion"
        android:layout_alignStart="@+id/chbxtitulacion"
        android:checked="false" />

</RelativeLayout>
