<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bastian.prueba1.views.perfilUsuario"
    android:background="@drawable/fons5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenidaPerfil"
        android:id="@+id/textView3"
        android:onClick="onclickCrearEvento"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crear Evento"
        android:onClick="onclickcreateEvent"
        android:id="@+id/botonCrearEvento"
        android:layout_above="@+id/btnMisEventos"
        android:layout_alignLeft="@+id/btnMisEventos"
        android:layout_alignStart="@+id/btnMisEventos" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misEventos"
        android:id="@+id/btnMisEventos"
        android:onClick="onButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!-- Esta parte es el textview para poner el correo electrónico del usuario en la vista de perfil de usuario.-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emptyString"
        android:id="@+id/TVusername"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:elevation="5dp"
        android:onClick="onclickverEventos"
        android:text="Ver eventos cercanos"
        android:id="@+id/verEventos"
        android:layout_above="@+id/asistirEvento"
        android:layout_alignLeft="@+id/asistirEvento"
        android:layout_alignStart="@+id/asistirEvento" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Asistir a Evento"
        android:onClick="onclickEventoAsistir"
        android:id="@+id/asistirEvento"
        android:layout_above="@+id/botonCrearEvento"
        android:layout_alignLeft="@+id/botonCrearEvento"
        android:layout_alignStart="@+id/botonCrearEvento" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editar perfil"
        android:onClick="onclickEditarPerfil"
        android:id="@+id/buttoneditoperfil"
        android:layout_below="@+id/botonCrearEvento"
        android:layout_toRightOf="@+id/TVusername"
        android:layout_toEndOf="@+id/TVusername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log out/"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:textColor="#2c4cf8"
        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:textStyle="bold"
        android:onClick="onclickCerrarSesion"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deshabilitar cuenta"
        android:id="@+id/textView9"
        android:textColor="#2c4cf8"
        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:textStyle="bold"
        android:onClick=""
        android:layout_alignBottom="@+id/TVusername"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />


</RelativeLayout>
